# alog

./: .gitignore  LICENSE.txt  README.md  alog.hpp  format.hpp
test/: CMakeLists.txt  a.cc  alog_test.cc  alog_test1.cc  alog_test2.cc  include  main.cc  src
